Bug Fix: Scrollbar went out of frame for <550px width

--- a/extensions/PostSubscriber/PostSubscriber.css
+++ b/extensions/PostSubscriber/PostSubscriber.css
@@ -231,6 +231,10 @@ body.dark-theme #tasselPostSubscriberColor {
     #tasselPostSubscriberModalSubHeader div {
         height: 56px;
     }
+    
+    #postSubscriberModalContent {
+        max-height: calc(100vh - 131px);
+    }
 }
 
 @media(max-width:400px) {
